{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 399,
  "lineage": "544f5f99-f401-6a78-a6f9-17676940b93e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:590184002190:internet-gateway/igw-098ed71e9b9d0513d",
            "id": "igw-098ed71e9b9d0513d",
            "owner_id": "590184002190",
            "tags": {
              "Name": "DR-Terraform-IGW"
            },
            "tags_all": {
              "Name": "DR-Terraform-IGW"
            },
            "vpc_id": "vpc-0e242674a4a7dd42a"
          },
          "dependencies": [
            "aws_vpc.dr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184002190:internet-gateway/igw-0e2cae47a0aa50383",
            "id": "igw-0e2cae47a0aa50383",
            "owner_id": "590184002190",
            "tags": {
              "Name": "Terraform-IGW"
            },
            "tags_all": {
              "Name": "Terraform-IGW"
            },
            "vpc_id": "vpc-031c0edf92d6fcf69"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:590184002190:security-group/sg-07d5072ebabb15c3e",
            "description": "Terraform http \u0026 RDP allow",
            "egress": [],
            "id": "sg-07d5072ebabb15c3e",
            "ingress": [],
            "name": "DR-Terraform-SG",
            "name_prefix": "",
            "owner_id": "590184002190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DR-Terraform-SG"
            },
            "tags_all": {
              "Name": "DR-Terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e242674a4a7dd42a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184002190:security-group/sg-09fe7a1291e5ff153",
            "description": "Terraform http \u0026 RDP allow",
            "egress": [],
            "id": "sg-09fe7a1291e5ff153",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Terraform-SG",
            "name_prefix": "",
            "owner_id": "590184002190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-031c0edf92d6fcf69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr-prv-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:590184002190:subnet/subnet-0204835897ee96f02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0204835897ee96f02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184002190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DR-Terraform-Private-1-Subnet"
            },
            "tags_all": {
              "Name": "DR-Terraform-Private-1-Subnet"
            },
            "vpc_id": "vpc-0e242674a4a7dd42a"
          },
          "dependencies": [
            "aws_internet_gateway.dr-igw",
            "aws_vpc.dr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr-prv-sub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:590184002190:subnet/subnet-05f3fcf5f4b5d5ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f3fcf5f4b5d5ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184002190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DR-Terraform-Private-2-Subnet"
            },
            "tags_all": {
              "Name": "DR-Terraform-Private-2-Subnet"
            },
            "vpc_id": "vpc-0e242674a4a7dd42a"
          },
          "dependencies": [
            "aws_internet_gateway.dr-igw",
            "aws_vpc.dr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-prv-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184002190:subnet/subnet-06e7e70af75e89907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e7e70af75e89907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184002190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Private-3-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Private-3-Subnet"
            },
            "vpc_id": "vpc-031c0edf92d6fcf69"
          },
          "dependencies": [
            "aws_internet_gateway.web-igw",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-prv-sub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184002190:subnet/subnet-0a3ee009127c65fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3ee009127c65fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184002190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Private-4-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Private-4-Subnet"
            },
            "vpc_id": "vpc-031c0edf92d6fcf69"
          },
          "dependencies": [
            "aws_internet_gateway.web-igw",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:590184002190:vpc/vpc-0e242674a4a7dd42a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-01bb66c967c32bd74",
            "default_route_table_id": "rtb-01a9523dd04e04b17",
            "default_security_group_id": "sg-02c4783fdc8486132",
            "dhcp_options_id": "dopt-0b3f4919ccf716d9c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e242674a4a7dd42a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a9523dd04e04b17",
            "owner_id": "590184002190",
            "tags": {
              "Name": "DR-Terraform-VPC"
            },
            "tags_all": {
              "Name": "DR-Terraform-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184002190:vpc/vpc-031c0edf92d6fcf69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055e9e332c2edbf6d",
            "default_route_table_id": "rtb-0a2780edf3be03230",
            "default_security_group_id": "sg-0f12d81dad413d826",
            "dhcp_options_id": "dopt-0fb17c1e6159a9f11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031c0edf92d6fcf69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2780edf3be03230",
            "owner_id": "590184002190",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}